API changes for new factors UI (#892)
* Factors API changes

* user properties

* adding comments

* bug fixes

* adding tests

* review comments

* review comments

* SWAGGER

* query fixes

* review comments

* review comments

* renaming db and model

* few bug fixes

* Renamed all.

* small fix

* swagger changes

* swagger
